• mundhenk-logik/skript.latex   · Indexeinträge für modus ponens und Generalisierung eingefügt.
  · Viele Änderungen am dritten Kapitel, insbesondere habe ich jetzt alle ~
    aus den Formeln durch \quatsep ersetzt und Grausamkeiten wir „\ \  = \ “
    beseitigt.

  · Ich habe nochmal eine Zwischenüberschrift für die Modelle für S im dritten
    Kapitel eingefügt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1027 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -3686,9 +3686,9 @@ Offensichtlich gilt:
    \item \textit{Ableitungsregeln}
 
     \begin{mdescription}
-     \item[(MP)] modus ponens:
+     \item[(MP)] \emph{modus ponens}:
       $\displaystyle\frac{\alpha, \alpha\rightarrow\gamma}{\gamma}$
-     \item[(Gen)] Generalisierung:
+     \item[(Gen)] \emph{Generalisierung}:
       $\displaystyle\frac{\alpha}{(\forall x_{i}\quantsep \alpha)}$
       für ein beliebiges Variablensymbol $x_i$
     \end{mdescription}
@@ -3936,18 +3936,6 @@ Weitere Regeln (ohne Korrektheits"=Beweise):
 
   $\neg(\alpha\rightarrow\beta) \vdash\alpha$ und
   $\neg(\alpha\rightarrow\beta) \vdash\neg\beta$
-
-%  \item[Äquivalenz:] $\alpha \leftrightarrow \beta,\alpha\vdash\beta$ und
-%   $\alpha \leftrightarrow \beta, \beta\vdash\alpha$
-  
-%   $\alpha\leftrightarrow\beta, \neg\alpha\vdash\neg\beta$ und
-%   $\alpha\leftrightarrow\beta, \neg\beta\vdash\neg\alpha$
-  
-%   $\alpha \leftrightarrow\beta \vdash\alpha\rightarrow\beta$ und $\alpha
-%   \leftrightarrow\beta \vdash\beta\rightarrow\alpha$
-  
-%   $\alpha\rightarrow\beta, \beta\rightarrow\alpha \vdash\alpha
-%   \leftrightarrow\beta$
 
  \item[Widerspruchsbeweis:] Sei $\Gamma,\neg\alpha \vdash
   \beta\wedge\neg\beta$ beweisbar ohne Verwendung der Generalisierung auf
@@ -4927,7 +4915,8 @@ kann.
 
 Die \emph{Zahlentheorie} befasst sich mit Eigenschaften natürlicher Zahlen.
 Die wohl am Häufigsten gebrauchte Beschreibung der natürlichen Zahlen sind die
-fünf \emph{Peano-Axiome}:
+fünf \emph{Peano-Axiome} des italienischen Mathematikers Giuseppe Peano
+(1858--1932) aus dem Jahre 1889:
 \begin{enumerate}[(P1)]
  \item $0$ ist eine natürliche Zahl.
  \item Jede natürliche Zahl~$z$ hat genau einen Nachfolger~$z'$, der ebenfalls
@@ -4965,7 +4954,7 @@ Zu den Axiomen, die von der Theorien 1.~Ordnung (\autoref{def:theo1.ord})
 übernommen werden, ergänzen wir in $\ThS$ noch folgende Axiome, wobei $a_{1}$
 das einzige Konstantensymbol, $A_{1}^{2}$ das einzige Prädikatensymbol und
 $f_{1}^{1}, f_{1}^{2}$ und $f_{2}^{2}$ drei Funktionensybole sind -- auf ihre
-Bedeutungen \help{wäre an der Stelle Interpretationen richtig?} kommen wir
+Bedeutungen kommen wir
 gleich zu sprechen. Alle übrigen Symbole -- Variablensymbole $x_1, x_2, \dotsc$,
 logische Verknüpfungszeichen, Klammern -- werden ohne Einschränkung übernommen.
 \begin{enumerate}[(S1)]
@@ -4991,11 +4980,16 @@ logische Verknüpfungszeichen, Klammern -- werden ohne Einschränkung übernomme
        \alpha(x)\big)\Big)
   \end{gather*}
 \end{enumerate}
-\help{Woher wissen wir eigentlich, dass diese Axiome insich nicht
-  widersprüchlich sind?}
 
-Um die Bedeutung der Axiome etwas eingängiger darzustellen, verwenden wir die
-üblichen Schreibweisen aus der Mathematik:
+Um die Bedeutung der Axiome und der Formeln etwas eingängiger darzustellen und
+die Schreibung zu erleichtern, verwenden wir die üblichen Schreibweisen aus
+der Mathematik. Dies birgt den Nachteil in sich, dass man leicht dazu geneigt
+ist, die Trennung zwischen der formalen Theorie und der bekannten Mathematik
+aufzugeben, und daher vielleicht vorschnell sagt "`Ja, stimmt doch."', obwohl
+es in der formalen Theorie nicht so klar ist. Manchmal kann es also auch
+vorteilhaft sein, den Beweis mit der abstrakten Symbolen anstatt den
+eingängien Symbolen zu führen.
+
 \begin{itemize}
  \item statt dem Konstantensymbol~$a_1$ verwenden wir das Symbol $0$,
  \item statt dem Prädikatensymbol~$A^2_1(s,t)$ verwenden wir $s=t$ und
@@ -5056,8 +5050,6 @@ Hier noch einmal die Axiome mit der eingängigeren Schreibweise:
     anderen Axiome sind doch auch mit Formeln $\alpha,\beta$ formuliert, warum
     diese nicht?}
 
-  \todo{klären: Was ist mit S9? Funktioniert da Generalisierung?}
-
   \begin{proof}
     Da in den Axiomen (S1)--(S8) alle Variablen frei vorkommen, kann man
     schrittweise für jede Variable die Generalisierung und die Regel~RA4
@@ -5090,8 +5082,9 @@ Hier noch einmal die Axiome mit der eingängigeren Schreibweise:
 
 %%%%%%%%%%%%%
 
-Folgende grundlegende Eigenschaften der Gleichheitsrelation -- Reflexivität,
-Symmetrie, Transitivität -- sowie der Addition -- Kommutativität,
+Folgende grundlegende Eigenschaften der \emph{Gleichheitsrelation} -- Reflexivität,
+Symmetrie, Transitivität -- sowie der \emph{Addition} und der
+\emph{Multiplikation} -- Kommutativität,
 Assoziativität -- können wir auch in der Theorie~$\ThS$ beweisen.
 
 \begin{lemma}\label{lemma-zahlen-elem}
@@ -5202,8 +5195,6 @@ Assoziativität -- können wir auch in der Theorie~$\ThS$ beweisen.
                     \rightarrow
                  \left(x_{1}=x_{2} \rightarrow x_{1}+x_{3}' = x_{2} + x_{3}'\right)
       \end{gather*}
-      \help{Was ist mit mit $x_{1}=x_{2}$ passiert? Wie soll dann das mit der
-        Generalisierung von statten gehen?}
       Darauf wenden wir noch einmal die Generalisierung an und bekommen
       \begin{gather*}
         \Svdash \forall x_3\quantsep
@@ -5216,17 +5207,21 @@ Assoziativität -- können wir auch in der Theorie~$\ThS$ beweisen.
     Bis jetzt haben wir $\Svdash\alpha(0)$ und $\Svdash (\forall
     x_{3}\quantsep \alpha(x_{3}) \rightarrow \alpha(x_{3}'))$ gezeigt.
     \begin{align*}
-      &\Svdash \alpha(0) \rightarrow ((\forall x_{3}\quantsep
+      (1)\quad & \alpha(0) &\\
+      (2)\quad & (\forall x_{3}\quantsep \alpha(x_{3}) \rightarrow
+         \alpha(x_{3}')) &\\
+      (3)\quad & \alpha(0) \rightarrow ((\forall x_{3}\quantsep
          \alpha(x_{3}) \rightarrow \alpha(x_{3}')) \rightarrow (\forall
          x_{3}\quantsep \alpha(x_{3}))) & \text{S9}\\
-      &\Svdash (\forall x_{3}\quantsep
+      (4)\quad & (\forall x_{3}\quantsep
          \alpha(x_{3}) \rightarrow \alpha(x_{3}')) \rightarrow (\forall
-         x_{3}\quantsep \alpha(x_{3})) & \text{MP aus S9 und $\alpha(0)$}\\
-      &\Svdash \forall x_{3}\quantsep \alpha(x_{3})
-         &\text{MP aus $(\forall x_3\quantsep\alpha(x_3)\rightarrow\alpha(x_3'))$} \\
-      &\Svdash \alpha(x_{3}) & \text{RA4}
+         x_{3}\quantsep \alpha(x_{3})) & \text{MP 1,3}\\
+      (5)\quad &\forall x_{3}\quantsep \alpha(x_{3})
+         &\text{MP 3,4} \\
+      (6)\quad & \alpha(x_{3}) & \text{RA4 mit 5}
     \end{align*}
-    Sollte bei RA4 im letzten Schritt nicht ein Termsymbol entstehen?
+    Es gilt also
+    $\Svdash\alpha(x_{3}) = x_{1}=x_{2} \rightarrow x_{1}+x_{3}=x_{2}+x_{3}$.
   \end{proof}
 \end{lemma}
 
@@ -5238,10 +5233,7 @@ Symbole für natürliche Zahlen außer der $0$. Der Nachfolger von $0$ ist $0'$,
 und das ist im intuitiven Verständnis die $1$. Wir führen die abkürzende
 Schreibweise $\overline{1}$ für $0'$, $\overline{2}$ für $0''$, \dots{} und
 entsprechend $\overline{m}$ für $0\overbrace{'\raisebox{.7ex}{$\cdots$}'}
-^{\text{$m$-mal}}$ ein. Der Einheitlichkeit halber soll auch $\overline{0}=0$
-sein.
-\help{Hätte man nicht besser von Anfang an die Null mit $\overline{0}$
-  bezeichnet?}
+^{\text{$m$-mal}}$ ein.
 
 Den Strich über den Zahlen setzen wir, um die Symbole für die Elemente unserer
 Theorie~$\ThS$ von den natürlichen Zahlen abzuheben. Denn bereits der Strich
@@ -5261,22 +5253,22 @@ $'$ war eine Abkürzung für $f_{1}^{1}$.
   \end{enumerate}
 
   \begin{proof}
-    Der Beweis für die Addition mit 1:
+    Der Beweis für die Addition mit $\overline{1}$:
     \begin{align*}
-      (1)\quad & t+0 = t & \text{S5'}\\
-      (2)\quad & t+0 = t \rightarrow (t+0)' = t'& \text{(S9')}\\
-      (3)\quad & (t+0)' = t' & \text{MP, 1,2}\\
+      (1)\quad & t+0 = t & \text{(S5')}\\
+      (2)\quad & t+0 = t \rightarrow (t+0)' = t'& \text{(S2')}\\
+      (3)\quad & (t+0)' = t' & \text{MP 1,2}\\
       (4)\quad & t+0'=(t+0)' & \text{(S6')}\\
       (5)\quad & t+0' = t'   & \text{\autoref{lemma-zahlen-elem}~(c) Trans. von $=$ mit 4,3}
     \end{align*}
 
-    Der Beweis für die Multiplikation mit 1:
+    Der Beweis für die Multiplikation mit $\overline{1}$:
     \begin{align*}
-      (1)\quad & t\cdot 0 = 0 & \text{S7'}\\
+      (1)\quad & t\cdot 0 = 0 & \text{(S7')}\\
       (2)\quad & t\cdot0 = 0 \rightarrow t\cdot0+t = 0+t&
          \text{\autoref{lemma-zahlen-elem}~(e)}\\
       (3)\quad & t\cdot 0 + t = 0+t & \text{MP 1,2}\\
-      (4)\quad & t\cdot 0' = t\cdot 0 + t & \text{S8'}\\
+      (4)\quad & t\cdot 0' = t\cdot 0 + t & \text{(S8')}\\
       (5)\quad & t\cdot 0' = 0+t & \text{Trans. von $=$ mit 4,3}\\
       (6)\quad & t = 0+t& \text{\autoref{lemma-zahlen-elem}~(f)}\\
       (7)\quad & t\cdot0' = 0+t \rightarrow (t=0+t \rightarrow t\cdot 0'=t)
@@ -5308,7 +5300,6 @@ $'$ war eine Abkürzung für $f_{1}^{1}$.
       Axiom~(S4) ($t'=s'\rightarrow t=s$) und \autoref{lem:5} ($\Svdash
       (\alpha\rightarrow\beta)\rightarrow(\neg\beta\rightarrow\neg\alpha)$)
       herleiten lässt.
-      \help{Ist der Einsatz von \autoref{lem:5} hier in Ordnung?}
 
       \begin{faelle}
         \item Wenn $n>m$, dann ist $n-m-1\geq0$ und kann daher als
@@ -5321,7 +5312,7 @@ $'$ war eine Abkürzung für $f_{1}^{1}$.
           (4)\quad& \overline{1}\ne\overline{n-m+1} \rightarrow
              \overline{1}'\ne\overline{n-m+1}'& \text{Vorbem.}\\
           (5)\quad& \overline{2}\ne \overline{n-m+2}& \text{MP, 3,4}\\
-          \vdots\qquad& \quad\vdots& \vdots\quad\\
+          \vdots\quad& \quad\vdots& \vdots\quad\\
           (2m)\quad& \overline{m-1}\ne\overline{n-1} \rightarrow
              \overline{m-1}' \ne\overline{n-1}'& \text{Vorbem.}\\
           (2m+1)\quad& \overline{m}\ne\overline{n}& \text{MP $2m-1$,$2m$}
@@ -5388,15 +5379,15 @@ Weitere abkürzende Schreibweisen:\\
 \end{tabular}
 
 
+\subsection{Modelle für die Theorie~\texorpdfstring{$\ThS$}{S}}
 
-
-Das Standardmodell für $\ThS$ besteht
+Das \emph[index={Theorie~$\ThS$!Modell}]{Standardmodell für $\ThS$} besteht
 aus den natürlichen Zahlen als Grundmenge
 und der \glqq{}intuitiven\grqq{} Interpretation der übrigen Symbole.
 
 \begin{itemize}
  \item Grundmenge: die natürlichen Zahlen
- \item das Konstantensymbol $0$ wird durch die nat.\,Zahl $0$ interpretiert
+ \item das Konstantensymbol $0$ wird durch die natürliche Zahl $0$ interpretiert
  \item $f^1_1$ ($'$) wird durch Addition mit $1$ interpretiert
  \item $f^2_1$ und $f^2_2$ werden durch Addition und Multiplikation interpretiert
  \item $A^2_1$ wird durch die Gleichheitsrelation interpretiert
@@ -5738,7 +5729,7 @@ Die anderen Argumente werden nur "`mitgeschleift"'.
   \end{align*}
   und damit
   \begin{align*}
-    f_{\mathit{dec}}(0) & = Z(\, ) \\
+    f_{\mathit{dec}}(0) & = Z(\,) \\
     f_{\mathit{dec}}(x+1) & = U^{(2)}_1(x,f_{\mathit{dec}}(x))
   \end{align*}
 \end{lemma}
@@ -5873,7 +5864,7 @@ Dieses Mittel kann man auch für primitiv"=rekursive Funktionen verwenden.
 
 Eine Fallunterscheidung mit mehr als zwei Fällen, die durch
 primitiv"=rekursive Prädikate entschieden wird, ist ebenfalls
-primitiv"=rekursiv. Der Beweis verläuft analog dem Beweis für die einfachen
+primitiv"=rekursiv. Der Beweis verläuft analog dem Beweis für die einfache
 Fallunterscheidung.
 
 Als erstes Beispiel für eine rekursive Funktion hatten
@@ -5978,9 +5969,9 @@ beschrieben werden.
   Dann sind auch die folgenden mit beschränkten Quantoren definierten
   Prädikate primitiv"=rekursiv.
   \begin{gather*}
-    (\exists t)_{\leq y} P(x_1,\dotsc,x_k,t)
+    (\exists t)_{\leq y}\quantsep P(x_1,\dotsc,x_k,t)
        \qquad\text{und}\qquad
-       (\forall t)_{\leq y} P(x_1,\dotsc,x_k,t)\ \ .
+       (\forall t)_{\leq y}\quantsep P(x_1,\dotsc,x_k,t)
   \end{gather*}
 
   \begin{proof}
@@ -5989,7 +5980,7 @@ beschrieben werden.
     gibt.
     Also gilt
     \begin{align*}
-      (\exists t)_{\leq y} P(x_1,\dotsc,x_k,t)
+      (\exists t)_{\leq y}\quantsep P(x_1,\dotsc,x_k,t)
          & = \bigg( \Big[\sum_{t=0}^y P(x_1,\dotsc,x_k,t)\Big] \ne 0 \bigg) \\
       & = 1 \dminus \alpha \Big(\sum_{t=0}^y P(x_1,\dotsc,x_k,t)\Big)
     \end{align*}
@@ -6107,7 +6098,7 @@ Mitteln primitiv"=rekursiver Funktionen beschreiben.
     \begin{align*}
       t_0 & = \text{Anzahl aller $s\leq y$ mit\ }
          \sum_{u=0}^s P(x_1,\dotsc,x_k,u) = 0 \\
-      & = \sum_{s=0}^y\  \alpha\Big(\sum_{u=0}^s P(x_1,\dotsc,x_k,u)\Big)
+      & = \sum_{s=0}^y \alpha\Big(\sum_{u=0}^s P(x_1,\dotsc,x_k,u)\Big)
     \end{align*}
 
     Das schreiben wir als
@@ -6438,7 +6429,7 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
   $f$ heißt \emph{streng repräsentierbar}, falls Eigenschaft (2)
   durch die folgende Eigenschaft ersetzt werden kann:
   \begin{itemize}
-   \item[(2')] $\Svdash (\exists_1 x_{k+1}~ \alpha)$
+   \item[(2')] $\Svdash (\exists_1 x_{k+1}\quantsep \alpha)$
   \end{itemize}
 \end{defini}
 
@@ -6462,7 +6453,7 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
     Erster Term:
     \begin{align*}
       (1)\quad & x_{1}+x_{2}= x_{1}+x_{2} &\text{Lemma}\\
-      (2)\quad & \exists x_{3} ~ x_{1}+x_{2}=x_{3} &\text{RE4}
+      (2)\quad & \exists x_{3}\quantsep x_{1}+x_{2}=x_{3} &\text{RE4}
     \end{align*}
 
     Der zweite Term folgt aus der Symmetrie und der Transitivität der
@@ -6498,7 +6489,7 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
     \end{enumerate}
 
    \item zu zeigen ist noch  $\Svdash\exists_{1}
-    x_{2} ~ (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
+    x_{2}\quantsep (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
   \end{enumerate}
 \end{bsp}
 
@@ -6515,11 +6506,11 @@ $x_1=0$.
 Für $Z(\,)=m$ gilt $m=0$,
 und $\Svdash 0=0$
 folgt aus \autoref{lemma-zahlen-elem}(a).
-Es bleibt noch $\Svdash (\exists_1 x_{1}~ x_1=0)$
+Es bleibt noch $\Svdash (\exists_1 x_{1}\quantsep x_1=0)$
 zu zeigen, also
-$(\exists x_1~ x_1=0) \wedge (\forall x_1 ~ \forall y ~
+$(\exists x_1\quantsep x_1=0) \wedge (\forall x_1\quantsep \forall y\quantsep
 (x_1=0 \wedge y=0) \rightarrow x_1=y)$.
-Der erste Teil $(\exists x_1~ x_1=0)$
+Der erste Teil $(\exists x_1\quantsep x_1=0)$
 folgt aus $\Svdash 0=0$ (\autoref{lemma-zahlen-elem}(a)) und Regel RE4.
 Für den zweiten Teil führen wir folgenden Beweis.
 $
@@ -6560,7 +6551,7 @@ durch $\alpha, \beta_{1},\dotsc,\beta_{m}$. Definiere $f\colon
 \end{gather*}
 Dann ist $f$ repräsentierbar durch
 \begin{gather*}
-  \exists y_{1} \dotso \exists y_{n} ~
+  \exists y_{1}\quantsep \dotso \exists y_{n}\quantsep
      \beta_{1}(x_{1},\dotsc,x_{k},y_{1}) \wedge \dotsb \wedge
      \beta_{n}(x_{1},\dotsc,x_{k},y_{n}) \wedge
      \alpha(y_{1},\dotsc,y_{n}, y_{k+1})
@@ -6633,21 +6624,21 @@ tatsächlich existiert.
 Zur Dekodierung dient Gödels $\beta$-Funktion
 $\beta\colon\N^3\rightarrow \N$ mit
 \begin{gather*}
-  \beta(z,c,i) ~ = ~ z \bmod \left(\left(i+1\right)\cdot c +1\right) \ \ .
+  \beta(z,c,i) = z \bmod \left(\left(i+1\right)\cdot c +1\right)
 \end{gather*}
 Für die nach obiger Methode kodierten $k_i$ gilt $k_i=\beta(z,j!,i)$.
 Die $\beta$-Funktion ist repräsentierbar in $\mathrm{S}$.
 Dazu schauen wir uns die Definition der $\beta$-Funktion nochmal an.
 Für gegebenes $z$, $c$ und $i$ gibt es (genau) ein $w\in\N$ mit
 \begin{gather*}
-  z ~=~ w \cdot \left(\left(i+1\right)\cdot c +1\right)  + \beta(z,c,i) \ \ .
+  z = w \cdot \left(\left(i+1\right)\cdot c +1\right)  + \beta(z,c,i)
 \end{gather*}
 Außerdem gilt $\beta(z,c,i) \leq \left(i+1\right)\cdot c +1$.
 Damit haben wir die Bestandteile der folgenden Formel
 $Bt(x_1,x_2,x_3,x_4)$, die die $\beta$-Funktion
 repräesentiert.
 \begin{gather*}
-  (\exists w ~ x_1=w\cdot(x_3'\cdot x_2)'+x_4)~ \wedge~ x_4<(x_3'\cdot x_2)'  \ \ .
+  (\exists w\quantsep x_1=w\cdot(x_3'\cdot x_2)'+x_4) \wedge x_4<(x_3'\cdot x_2)'
 \end{gather*}
 Wir werden nun die Repräsentation der $\beta$-Funktion benutzen,
 um durch Rekursion entstandene Funktionen zu repräsentieren.
@@ -6677,19 +6668,19 @@ Zahlenfolge $v_0,v_1,\dotsc,v_m$
 kodiert als Zahl $z$ mit $v_i=\beta(z,c,i)$.
 Dann gilt (umgangssprachlich ausgedrückt)
 \begin{gather*}
-  \beta(z,c,0)=g(k_1,\dotsc,k_n) ~ \wedge ~
-     (\forall i  ~ i<m \rightarrow \beta(z,c,i+1)=h(i,\beta(z,c,i),k_1,\dotsc,k_n))
+  \beta(z,c,0)=g(k_1,\dotsc,k_n) \wedge
+     (\forall i\quantsep i<m \rightarrow \beta(z,c,i+1)=h(i,\beta(z,c,i),k_1,\dotsc,k_n))
 \end{gather*}
 Daraus entwickeln wir nun die Formel, die die
 Funktion $f$ repräsentiert.
 
 $\beta(z,c,0)=g(k_1,\dotsc,k_n)$ wird ausgedrückt durch
-$(\exists w ~ Bt(z,c,0,w) \wedge \gamma(x_1,\dotsc,x_n,w)$.
+$(\exists w\quantsep Bt(z,c,0,w) \wedge \gamma(x_1,\dotsc,x_n,w)$.
 Dabei sind $z$ und $c$ Variablensymbole, die
 genau die durch die Kodierung intendierten Werte annehmen sollen.
 
 $\beta(z,c,i+1)=h(i,\beta(z,c,i),k_1,\dotsc,k_n)$ wird ausgedrückt durch
-$(\exists u ~ \exists v ~ Bt(z,c,i,u) \wedge Bt(z,c,i',v) \wedge \delta(i,u,x_1,\dotsc,x_n,v))$.
+$(\exists u\quantsep \exists v\quantsep Bt(z,c,i,u) \wedge Bt(z,c,i',v) \wedge \delta(i,u,x_1,\dotsc,x_n,v))$.
 
 Schließlich muss noch ausgedrückt werden,
 dass $f(k_1,\dotsc,k_n,m)=\beta(z,c,m)$ ist.
@@ -6699,10 +6690,10 @@ Insgesamt erhalten wir folgende Formel zur Repräsentation von $f$.
 
 $
 \begin{array}{rcl}
-  \exists z ~ \exists c & & (\exists w ~ Bt(z,c,0,w) \wedge \gamma(x_1,\dotsc,x_n,w)) \\
+  \exists z\quantsep \exists c & & (\exists w\quantsep Bt(z,c,0,w) \wedge \gamma(x_1,\dotsc,x_n,w)) \\
   & \wedge &
-  (\forall i ~ i<m \rightarrow
-  (\exists u ~ \exists v ~ Bt(z,c,i,u) \wedge Bt(z,c,i',v) \wedge \delta(i,u,x_1,\dotsc,x_n,v))) \\
+  (\forall i\quantsep i<m \rightarrow
+  (\exists u\quantsep \exists v\quantsep Bt(z,c,i,u) \wedge Bt(z,c,i',v) \wedge \delta(i,u,x_1,\dotsc,x_n,v))) \\
   & \wedge & Bt(z,c,x_{n+1},x_{n+2})
 \end{array}
 $
@@ -6781,7 +6772,7 @@ Dann ist
 wobei $p_i$ die $i$-te Primzahl ist ($p_0=2$).
 \vspace{1ex}
 
-Bsp.:\ \  \ $g(\forall x_1~ A_2^1(x_1)) = 2^{13} \cdot 3^{21} \cdot 5^{138}
+Bsp.:\qquad $g(\forall x_1\quantsep A_2^1(x_1)) = 2^{13} \cdot 3^{21} \cdot 5^{138}
           \cdot 7^3 \cdot 11^{21} \cdot 13^{5}$
 \vspace{1ex}
 
@@ -6801,9 +6792,9 @@ Dann ist
 wobei $p_i$ die $i$-te Primzahl ist ($p_0=2$).
 \vspace{2ex}
 
-Bsp.:\ \  \ $g(\forall x_1~ A_2^1(x_1), x_1)
+Bsp.:\qquad $g(\forall x_1\quantsep A_2^1(x_1), x_1)
 = 2^{(2^{13} \cdot 3^{21} \cdot 5^{138} \cdot 7^3 \cdot 11^{21} \cdot 13^{5})}
-  \ \cdot 3^{(2^{21})}$
+  \cdot 3^{(2^{21})}$
 \vspace{3ex}
 
 
@@ -6827,51 +6818,51 @@ diese Relationen primitiv"=rekursiv.
 \item $IC = \{ n \mid n\mbox{ ist GN eines Konstantensymbols} \}$
 \vspace{1ex}
 
-$IC(n)\ = \ (n\geq 15) \wedge (n \bmod 8 = 7)$
+$IC(n) = (n\geq 15) \wedge (n \bmod 8 = 7)$
 \vspace{1ex}
 
 \item $Vb = \{ n \mid n\mbox{ ist GN eines Variablensymbols} \}$
 \vspace{1ex}
 
-$Vb(n)\ = \ (n\geq 15) \wedge (n \bmod 8 = 5)$
+$Vb(n) = (n\geq 15) \wedge (n \bmod 8 = 5)$
 \vspace{1ex}
 
 \item $FL = \{ n \mid n\mbox{ ist GN eines Funktionssymbols} \}$
 \vspace{1ex}
 
-$FL(n)\ = \ (n\geq 15) \wedge (n \bmod 8 = 1)$
+$FL(n) = (n\geq 15) \wedge (n \bmod 8 = 1)$
 \vspace{1ex}
 
 \item $PL = \{ n \mid n\mbox{ ist GN eines Prädikatensymbols} \}$
 \vspace{1ex}
 
-$PL(n)\ = \ (n\geq 15) \wedge (n \bmod 8 = 3)$
+$PL(n) = (n\geq 15) \wedge (n \bmod 8 = 3)$
 
 \item $EIC = \{ n \mid n\mbox{ ist GN eines Ausdrucks, der aus einem Konstantensymbol besteht} \}$
 \vspace{0.5ex}
 
-$EIC(n)\ = \ (\exists z)_{\leq n}~ (IC(z) \wedge n=2^z)$
+$EIC(n) = (\exists z)_{\leq n}\quantsep (IC(z) \wedge n=2^z)$
 \vspace{1ex}
 
 \item $EVb = \{ n \mid n\mbox{ ist GN eines Ausdrucks,
 der aus einem Variablensymbol besteht} \}$
 \vspace{0.5ex}
 
-$EVb(n)\ = \ (\exists z)_{\leq n} ~ (Vb(z) \wedge n=2^z)$
+$EVb(n) = (\exists z)_{\leq n}\quantsep  (Vb(z) \wedge n=2^z)$
 \vspace{1ex}
 
 \item $EFL = \{ n \mid n\mbox{ ist GN eines Ausdrucks,
          der aus einem Funktionssymbol besteht} \}$
 \vspace{0.5ex}
 
-$EFL(n)\ = \ (\exists z)_{\leq n} ~ (FL(z) \wedge n=2^z)$
+$EFL(n) = (\exists z)_{\leq n}\quantsep (FL(z) \wedge n=2^z)$
 \vspace{1ex}
 
 \item $EPL = \{ n \mid n\mbox{ ist GN eines Ausdrucks,
            der aus einem Prädikatensymbol besteht} \}$
 \vspace{0.5ex}
 
-$EPL(n)\ = \ (\exists z)_{\leq n}~(PL(z) \wedge n=2^z)$
+$EPL(n) = (\exists z)_{\leq n}\quantsep(PL(z) \wedge n=2^z)$
 
 \end{itemize}
 
@@ -6927,7 +6918,6 @@ In diesem Beispiel ist
 \begin{gather*}
   g(x_1, f_2^2(a_3,x_1), f^1_3(f^2_2(a_1,a_2),x_1,a_{13}))
      = 2^{g(x_1)} \cdot 3^{g(f_2^2(a_3,x_1))} \cdot 5^{g(f^1_3(f^2_2(a_1,a_2),x_1,a_{13}))}
-     ~ ~ .
 \end{gather*}
 Sei $m=g(x_1, f_2^2(a_3,x_1), f^1_3(f^2_2(a_1,a_2),x_1,a_{13}))$
 die Kodierung der Zerlegung von $t$.
@@ -6938,12 +6928,12 @@ die Kodierungen des zweiten und dritten Termes der Zerlegung von $t$ sind
 $(m)_1 (=g(f_2^2(a_3,x_1)))$ und $(m)_2 (=g(f^1_3(f^2_2(a_1,a_2),x_1,a_{13})))$.
 Also gilt
 \begin{gather*}
-  t = (c)_0 * 2^3 * (m)_0 * 2^7 * (m)_1 * 2^7 * (m)_2 * 2^5 ~ ~ .
+  t = (c)_0 * 2^3 * (m)_0 * 2^7 * (m)_1 * 2^7 * (m)_2 * 2^5
 \end{gather*}
 Formal drücken wir die Zerlegung eines Termes durch folgendes Prädikat aus.
 \vspace{1ex}
 
-$Zerl_T\ = \ \{ (x,w)\mid$\begin{tabular}[t]{ll}
+$Zerl_T = \{ (x,w)\mid$\begin{tabular}[t]{ll}
                        $x$ ist GN eines Termes $f^n_i(t_1,\dotsc,t_k)$ \\
          und $w=2^{g(t_1)} \cdot 3^{g(t_2)} \dotsm p_{n-1}^{g(t_n)}$ & $\}$
                \end{tabular}
@@ -6959,7 +6949,7 @@ Dieses Prädikat ist primitiv"=rekursiv.
 Atomare Formeln können entsprechend in ihre Terme zerlegt werden.
 Dafür benutzen wir $Zerl_A(x,w)$.
 
-$Zerl_A\ = \ \{ (x,w)\mid$\begin{tabular}[t]{ll}
+$Zerl_A = \{ (x,w)\mid$\begin{tabular}[t]{ll}
                        $x$ ist GN einer atomaren Formel $A^n_i(t_1,\dotsc,t_k)$ \\
              und $w=2^{g(t_1)} \cdot 3^{g(t_2)} \dotsm p_{n-1}^{g(t_n)}$ & $\}$
                \end{tabular}
@@ -6980,18 +6970,18 @@ Die folgenden Relationen sind primitiv"=rekursiv.
 \item $Trm=\{ n \mid \mbox{ $n$ ist GN eines Termes}\}$
 
   \begin{multline*}
-    Trm(n) = EIC(n) ~\vee~ EVb(n) ~\vee~ \\
-    \big( EFL((n)_0) ~\wedge~
+    Trm(n) = EIC(n) \vee EVb(n) \vee \\
+    \big( EFL((n)_0) \wedge
        (\exists w)_{<(p_n)^{n^2}} ( Zerl_T(n,w) \wedge
-       (\forall i)_{\leq lh(w)} Trm((w)_i) ) \big) ~ ~ .
+       (\forall i)_{\leq lh(w)} Trm((w)_i) ) \big)
   \end{multline*}
 
 \item $Atmfml=\{ n \mid \mbox{ $n$ ist GN einer atomaren Formel}\}$
 
   \begin{gather*}
-    Atmfml(n) \ = \ EPL((n)_0) ~\wedge~
+    Atmfml(n) = EPL((n)_0) \wedge
        (\exists w)_{<(p_n)^{n^2}} ( Zerl_A(n,w) \wedge
-       (\forall i)_{\leq lh(w)} Trm((w)_i) ) ) ~ ~ .
+       (\forall i)_{\leq lh(w)} Trm((w)_i) ) )
   \end{gather*}
 \end{itemize}
 
@@ -7004,36 +6994,36 @@ sind primitiv"=rekursiv.
 \item $NegFml(x)=$ die GN der Formel $(\neg \alpha)$,
 falls $x$ die GN von Formel $\alpha$ ist
   \begin{gather*}
-    NegFml(x) \ = \ 2^3 * 2^9 * x * 2^5
+    NegFml(x)  = 2^3 * 2^9 * x * 2^5
   \end{gather*}
 
 \item $CondFml(x,y)=$ die GN der Formel $(\alpha\rightarrow \beta)$,
 falls $x$ und $y$ die GNn von $\alpha$ und $\beta$ sind
   \begin{gather*}
-    CondFml(x,y) \ = \ 2^3 * x * 2^{11} * y * 2^5
+    CondFml(x,y)  = 2^3 * x * 2^{11} * y * 2^5
   \end{gather*}
 
-\item $GenFml(u,v)=$ die GN der Formel $(\forall x ~\alpha)$,
+\item $GenFml(u,v)=$ die GN der Formel $(\forall x\quantsep \alpha)$,
 falls $u$ und $v$ die GNn von $\alpha$ und $x$ sind
   \begin{gather*}
-    GenFml(u,v) \ = \ 2^3 * 2^{13} * 2^{v} * u * 2^5
+    GenFml(u,v)  = 2^3 * 2^{13} * 2^{v} * u * 2^5
   \end{gather*}
 
 \end{itemize}
 
 Daraus können wir die Repräsentation der Relation
 \begin{gather*}
-  Fml \ = \ \{ x \mid x \mbox{ ist GN einer Formel} \}
+  Fml  = \{ x\colon x \mbox{ ist GN einer Formel} \}
 \end{gather*}
 zusammensetzen.
 
 $
 \begin{array}{llll}
-Fml(x) \ = & \multicolumn{3}{l}{Atmfml(x) ~ \vee} \\
-& (\exists z)_{<x} \big[ & (Fml(z)~ \wedge ~ x=NegFml(z)) ~ \vee \\
-& & ( Fml((z)_0) ~ \wedge ~ Fml((z)_1) ~ \wedge ~ x=CondFml((z)_0,(z)_1)) ~\vee \\
-& & ( Fml((z)_0) ~ \wedge ~ Vb((z)_1) ~ \wedge ~ x=GenFml((z)_0,(z)_1)
-          & \big] \\
+Fml(x) = & \multicolumn{3}{l}{Atmfml(x) \vee} \\
+& (\exists z)_{<x}\quantsep \big[ & (Fml(z) \wedge x=NegFml(z)) \vee \\
+& & ( Fml((z)_0)  \wedge  Fml((z)_1)  \wedge  x=CondFml((z)_0,(z)_1)) \vee \\
+& & ( Fml((z)_0)  \wedge  Vb((z)_1)  \wedge  x=GenFml((z)_0,(z)_1)
+          & \big]
 \end{array}
 $
 
@@ -7050,7 +7040,7 @@ berechnen aus den Kodierungen von $\alpha$, $x$ und $t$.
 Dazu beginnen wir bei den Termen, in denen die Ersetzungen
 tatsächlich stattfinden.
 
-$TrmSubst\ = \ \{ (x,y,u,v)\mid$\begin{tabular}[t]{p{0.6\textwidth}l}
+$TrmSubst = \{ (x,y,u,v)\mid$\begin{tabular}[t]{p{0.6\textwidth}l}
                        wenn im Term mit GN $y$ der Term mit GN $v$
                        für alle Vorkommen der Variablen mit GN $u$ eingesetzt wird,
                        dann entsteht der Term mit GN $x$ \\[-3ex] & $ \}$
@@ -7078,14 +7068,14 @@ und die Ersetzungen auf die Terme der Zerlegung einzeln angewendet werden.
 
 $
 \begin{array}{p{10mm}lll}
-\multicolumn{3}{l}{TrmSubst(x,y,u,v) ~ = } \\
-& \multicolumn{3}{l}{Trm(x) ~\wedge~ Trm(y)  ~\wedge~ Vb(u) ~\wedge~ Trm(v) ~\wedge~} \\
- & \big( & (y=2^u ~\wedge~ x=v) ~\vee \\
- &       & (EVb(y) ~\wedge~ y\ne2^u ~\wedge~ x=y) ~\vee \\
- &       & (EIC(y) \wedge x=y) ~\vee \\
+\multicolumn{3}{l}{TrmSubst(x,y,u,v)  = } \\
+& \multicolumn{3}{l}{Trm(x) \wedge Trm(y)  \wedge Vb(u) \wedge Trm(v) \wedge} \\
+ & \big( & (y=2^u \wedge x=v) \vee \\
+ &       & (EVb(y) \wedge y\ne2^u \wedge x=y) \vee \\
+ &       & (EIC(y) \wedge x=y) \vee \\
  &      & \begin{array}[t]{ll}
-        (\exists w)_{<(p_y)^{y^2}} (\exists z)_{<(p_x)^{x^2}} & Zerl_T(y,w) ~\wedge~ Zerl_T(x,z) ~\wedge \\
-                    & (\forall i)_{<Arg_T((y)_0)} TrmSubst((z)_i,(w)_i,u,v)~ \wedge \\
+        (\exists w)_{<(p_y)^{y^2}} (\exists z)_{<(p_x)^{x^2}} & Zerl_T(y,w) \wedge Zerl_T(x,z) \wedge \\
+                    & (\forall i)_{<Arg_T((y)_0)} TrmSubst((z)_i,(w)_i,u,v) \wedge \\
                     & (x)_0=(y)_0
         \end{array} & \\[-3ex]
  &      & & \big)
@@ -7096,7 +7086,7 @@ $
 Ersetzungen in atomaren Formeln laufen entsprechend.
 \vspace{1ex}
 
-$AtmfmlSubst\ = \ \{ (x,y,u,v)\mid$\begin{tabular}[t]{p{0.5\textwidth}l}
+$AtmfmlSubst = \{ (x,y,u,v)\mid$\begin{tabular}[t]{p{0.5\textwidth}l}
                        wenn in der at.Fml. mit GN $y$ der Term mit GN $v$
                        für alle Vorkommen der Variablen mit GN $u$ eingesetzt wird,
                        dann entsteht die at.Fml. mit GN $x$ \\[-3ex] & $ \}$
@@ -7106,11 +7096,11 @@ $AtmfmlSubst\ = \ \{ (x,y,u,v)\mid$\begin{tabular}[t]{p{0.5\textwidth}l}
 
 $
 \begin{array}{p{10mm}lll}
-\multicolumn{3}{l}{AtmfmlSubst(x,y,u,v) \ = } \\
-& \multicolumn{3}{l}{Atmfml(x) ~\wedge~ Atmfml(y)  ~\wedge~ Vb(u) ~\wedge~ Trm(v) ~\wedge~} \\
+\multicolumn{3}{l}{AtmfmlSubst(x,y,u,v) = } \\
+& \multicolumn{3}{l}{Atmfml(x) \wedge Atmfml(y)  \wedge Vb(u) \wedge Trm(v) \wedge} \\
 & \big( & \begin{array}[t]{ll}
-        (\exists w)_{<(p_y)^{y^2}} (\exists z)_{<(p_x)^{x^2}} & Zerl_A(y,w) ~\wedge~ Zerl_A(x,z) ~\wedge \\
-                    & (\forall i)_{<Arg_P((y)_0)} TrmSubst((z)_i,(w)_i,u,v)~ \wedge \\
+        (\exists w)_{<(p_y)^{y^2}} (\exists z)_{<(p_x)^{x^2}} & Zerl_A(y,w) \wedge Zerl_A(x,z) \wedge \\
+                    & (\forall i)_{<Arg_P((y)_0)} TrmSubst((z)_i,(w)_i,u,v) \wedge \\
                     & (x)_0=(y)_0
         \end{array} & \\[-3ex]
 &      & & \big)
@@ -7125,7 +7115,7 @@ die die Kodierung der durch Ersetzung entstandenen Formel bestimmt.
 
 \vspace{1ex}
 
-$Subst(y,u,v)\ = \ x$\begin{tabular}[t]{p{0.7\textwidth}l}
+$Subst(y,u,v) = x$\begin{tabular}[t]{p{0.7\textwidth}l}
                        für die GN $x$ der Formel, die entsteht,
                        wenn in der Formel mit GN $y$ der Term mit GN $v$
                        für alle freien Vorkommen der Variablen mit GN $u$ eingesetzt wird
@@ -7141,10 +7131,10 @@ dann findet die Ersetzung mittels $\mathit{AtmfmlSubst}$ statt
 dann gilt $\alpha[x_i/t] = (\neg \beta[x_i/t])$
 \item wenn $\alpha=(\beta\rightarrow\gamma)$,
 dann gilt $\alpha[x_i/t] = (\beta[x_i/t]\rightarrow\gamma[x_i/t])$
-\item wenn $\alpha=(\forall x_i ~ \beta)$,
+\item wenn $\alpha=(\forall x_i\quantsep \beta)$,
 dann gilt $\alpha[x_i/t] = \alpha$
-\item wenn $\alpha=(\forall x_j ~ \beta)$ für $x_i\ne x_j$,
-dann gilt $\alpha[x_i/t] = (\forall x_j ~ \beta[x_i/t])$
+\item wenn $\alpha=(\forall x_j\quantsep \beta)$ für $x_i\ne x_j$,
+dann gilt $\alpha[x_i/t] = (\forall x_j\quantsep \beta[x_i/t])$
 \end{enumerate}
 Diese Fallunterscheidung findet sich in folgender Formel wieder,
 die zeigt, dass $Subst$ primitiv"=rekursiv ist.
@@ -7170,7 +7160,7 @@ ob eine Formel ein freies Vorkommen einer Variablen enthält.
 
 \begin{itemize}
 \item
-$Fr\ = \ \{ (y,u)\mid$\begin{tabular}[t]{p{0.5\textwidth}l}
+$Fr = \{ (y,u)\mid$\begin{tabular}[t]{p{0.5\textwidth}l}
                        in der Formel mit GN $y$ kommt Variable mit GN $u$ frei vor
                        \\[-3ex] & $ \}$
                \end{tabular}
@@ -7203,11 +7193,11 @@ $
 \item $D(u)=$ die GN von $\alpha[x_1/\overline{u}]$, falls $u$ die GN von $\alpha$ ist
 \vspace{1ex}
 
-$D(u) ~=~ Subst(u,21,\mathit{Num}(u))$ \ \ .
+$D(u) = Subst(u,21,\mathit{Num}(u))$.
 \item $D_2(u)=$ die GN von $\alpha[x_2/\overline{u}]$, falls $u$ die GN von $\alpha$ ist
 \vspace{1ex}
 
-$D_2(u) ~=~ Subst(u,29,\mathit{Num}(u))$ \ \ .
+$D_2(u) = Subst(u,29,\mathit{Num}(u))$.
 \end{itemize}
 
 Die Funktionen $D$ und $D_2$ heißen \emph{Diagonalfunktion}
@@ -7232,7 +7222,7 @@ sind primitiv"=rekursiv.
                         \end{tabular}
 
 $
-\mathit{MP}(x,y,z) \ = \ ( y= 2^3 * x * 2^{11} * z * 2^5) \wedge Fml(x) \wedge Fml(z)
+\mathit{MP}(x,y,z) = ( y= 2^3 * x * 2^{11} * z * 2^5) \wedge Fml(x) \wedge Fml(z)
 $
 
 \item $Gen=\{(x,y)\mid $\begin{tabular}[t]{ll} Ausdruck mit GN $y$ entsteht\\
@@ -7240,7 +7230,7 @@ $
                         \end{tabular}
 
 $
-Gen(x,y) \ = \ (\exists v)_{<y}~(EVb(v) \wedge y=2^3*2^{13}*v*x*2^5) \wedge Fml(x)
+Gen(x,y) =(\exists v)_{<y}\quantsep (EVb(v) \wedge y=2^3*2^{13}*v*x*2^5) \wedge Fml(x)
 $
 \end{itemize}
 
@@ -7251,7 +7241,7 @@ Die Relation
 ist primitiv"=rekursiv für die Axiome von $\mathrm{S}$.
 Damit ergibt sich, dass auch Kodierungen von Beweisen primitiv"=rekursiv sind.
 
-$\mathit{Prf} \ = \ \{ y \mid \mbox{$y$ ist GN eines Beweises} \}$
+$\mathit{Prf} = \{ y \mid \mbox{$y$ ist GN eines Beweises} \}$
 
 Dazu betrachten wir folgende induktive Definition von Beweisen.
 
@@ -7307,18 +7297,18 @@ Das Prädikat $\mathit{Pf}$ mit
      der Formel mit Gödelnummer $x_{2}$} \}
 \end{gather*}
 %
-primitiv"=rekursiv.
-Folglich gibt es eine Formel~$\phi_{Pf}$ in $\ThS$,
+ist primitiv"=rekursiv.
+Folglich gibt es eine Formel~$\phi_{\mathit{Pf}}$ in $\ThS$,
 die das Prädikat~$\mathit{Pf}$ repräsentiert.
 Wenn eine Formel $\alpha$ mit Gödelnummer $u$ in $\ThS$ nicht beweisbar ist,
-dann ist die Formel $\forall x_1 ~ \neg \phi_{Pf}[x_2/\overline{u}]$
+dann ist die Formel $\forall x_1\quantsep \neg \phi_{\mathit{Pf}}[x_2/\overline{u}]$
 wahr (im Standardmodell).
 Analog zu \glqq{}Dieser Satz ist falsch\grqq{}
 könnte man nun versuchen, eine Formel zu konstruieren,
 die der Aussage \glqq{}Diese Aussage ist nicht beweisbar.\grqq{} entspricht.
 Man könnte eine Zahl $u$ suchen,
 so dass $u$ genau die Gödelnummer von
-$\forall x_1 ~ \neg \phi_{Pf}[x_2/\overline{u}]$ ist.
+$\forall x_1\quantsep \neg \phi_{\mathit{Pf}}[x_2/\overline{u}]$ ist.
 Mit der hier betrachteten Kodierung von Formeln und Termen in Zahlen
 geht das nicht.
 Muss man dazu nun eine geschicktere Kodierung wählen?
@@ -7329,10 +7319,10 @@ deren Äquivalenz zur Aussage \glqq{}$\gamma_0$ ist nicht beweisbar\grqq{}
 bewiesen werden kann.
 D.\,h. für
 die Gödelnummer $g$ von $\gamma_0$ gilt
-$\Svdash \gamma_0 \leftrightarrow (\forall x_1 ~ \neg \phi_{Pf}[x_2/\overline{g}])$.
+$\Svdash \gamma_0 \leftrightarrow (\forall x_1\quantsep \neg \phi_{\mathit{Pf}}[x_2/\overline{g}])$.
 Diese Formel $\gamma_0$ ist in der Tat nicht in $\ThS$ beweisbar
 (\autoref{satz-gamma0-nicht-beweisbar}).
-Also ist $\forall x_1 ~ \neg \phi_{Pf}[x_2/\overline{g}]$ wahr (im Standardmodell),
+Also ist $\forall x_1\quantsep \neg \phi_{\mathit{Pf}}[x_2/\overline{g}]$ wahr (im Standardmodell),
 und da $\gamma_0$ beweisbar äquivalent dazu ist,
 ist $\gamma_0$ ebenfalls eine wahre Formel.
 Die Konstruktion von $\gamma_0$ wird möglich
@@ -7370,8 +7360,8 @@ bezeichnet $\ucorner{\alpha}$ den Term $\overline{u}$.
     %
     Sei $\phi_{D_2}$ eine Formel in $\mathrm{S}$, die die
     Diagonalfunktion $D_2$ repräsentiert. Wir definieren die
-    Formeln $\alpha_{2} := (\forall x_{2} ~ \phi_{D_2}\rightarrow
-    \alpha)$ und $\gamma := (\forall x_{2} ~
+    Formeln $\alpha_{2} := (\forall x_{2}\quantsep \phi_{D_2}\rightarrow
+    \alpha)$ und $\gamma := (\forall x_{2}\quantsep
     \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow \alpha)$.
     Es gilt $\Svdash\phi_{D} [x_{1}/\ucorner{\alpha_{2}},
     x_{2}/\ucorner{\gamma}]$, da $D_2(\text{Gödelnummer von
@@ -7383,7 +7373,7 @@ bezeichnet $\ucorner{\alpha}$ den Term $\overline{u}$.
     \begin{enumerate}
      \item $\Svdash\gamma \rightarrow \alpha[x_{2}/\ucorner{\gamma}]$:
       \begin{align*}
-        (1)\quad& (\forall x_{2}~ \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}]
+        (1)\quad& (\forall x_{2}\quantsep \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}]
            \rightarrow \alpha) & \text{Hypothese $\gamma$}\\
         (2)\quad& \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}, x_{2}/\ucorner{\gamma}]
            \rightarrow \alpha[x_{2}/\ucorner{\gamma}] & \text{(1), RA 4}\\
@@ -7398,7 +7388,7 @@ bezeichnet $\ucorner{\alpha}$ den Term $\overline{u}$.
       \begin{align*}
         (1)\quad& \alpha[x_{2}/\ucorner{\gamma}] & \text{Hypothese}\\
         (2)\quad& \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}] &\text{Hypothese}\\
-        (3)\quad& \exists_{1} x_{2} ~ \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}]
+        (3)\quad& \exists_{1} x_{2}\quantsep \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}]
            &\text{da $\phi_{D_2}$ $D_2$ streng repräsentiert}\\
         (4)\quad& \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}, x_{2}/\ucorner{\gamma}]
            &\text{$(\star)$}\\
@@ -7413,7 +7403,7 @@ bezeichnet $\ucorner{\alpha}$ den Term $\overline{u}$.
       \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow \alpha$.
 
       Mit Generalisierung: $\alpha[x_{2}/\ucorner{\gamma}] \Svdash
-      \underbrace{\forall x_{2} ~ \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow
+      \underbrace{\forall x_{2}\quantsep \phi_{D_2}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow
       \alpha}_{\gamma}$.
 
       Mit Deduktionstheorem: $\Svdash\alpha [x_{2}/\ucorner{\gamma}]\rightarrow
@@ -7439,12 +7429,12 @@ und folglich repräsentierbar.
 %
 $\phi_{Pf}$ sei eine Formel in $\mathrm{S}$, die $\mathit{Pf}$ repräsentiert.
 $\phi_{Pf}$ hat die freien Variablen $x_{1}$ und $x_{2}$. $(\forall
-x_{1} ~ \neg\phi_{Pf})$ ist eine Formel in $\mathrm{S}$ mit $x_{2}$
+x_{1}\quantsep \neg\phi_{Pf})$ ist eine Formel in $\mathrm{S}$ mit $x_{2}$
 als einziger freien Variable. Mit dem Diagonalisierungslemma
 (\autoref{satz:6}) folgt:
 es gibt eine Formel $\gamma_0$ mit
 \begin{gather*}
-  \Svdash \gamma_{0} \leftrightarrow (\forall x_{1} ~ \neg\phi_{Pf}
+  \Svdash \gamma_{0} \leftrightarrow (\forall x_{1}\quantsep \neg\phi_{Pf}
      [x_{2}/\ucorner{\gamma_{0}}])
 \end{gather*}
 $\gamma_{0}$ ist also (beweisbar) äquivalent zu der Formel
@@ -7466,9 +7456,9 @@ Wir zeigen, dass das eine wahre Aussage ist.
     Aufgrund der Konstruktion von $\gamma_0$ mit dem
     Diagonalisierungslemma (\autoref{satz:6}) gilt
     $\Svdash\gamma_{0} \leftrightarrow
-         (\forall x_{2} ~ \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
+         (\forall x_{2}\quantsep \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
     Nach Äquivalenzregel folgt
-    $\Svdash (\forall  x_{1} ~ \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
+    $\Svdash (\forall  x_{1}\quantsep \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
     Mit RA~4 folgt
     $\Svdash\neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}, x_{1}/\overline{r}]$.
     Also ist $\mathrm{S}$ nicht konsistent.
@@ -7486,7 +7476,7 @@ mit den natürlichen Zahlen als Grundmenge bezieht.
   \begin{gather*}
     \text{falls für jede natürliche Zahl $n$ gilt $\xvdash{K} \neg\alpha[x/\overline{n}]$,
            dann
-       $\not\xvdash{K}(\exists x ~ \alpha)$}
+       $\not\xvdash{K}(\exists x\quantsep \alpha)$}
   \end{gather*}
 \end{defini}
 
@@ -7510,7 +7500,7 @@ $\mathrm{S}$ ist $\omega$-konsistent, da die Standardinterpretation
     $\neg \alpha[x/\overline{u}]$ ist Instanz einer Tautologie. Also gilt
     $\xvdash{K} \neg\alpha[x/\overline{u}]$ für jedes $n\in\N$.
 
-    Da $K$ $\omega$-konsistent ist, folgt $\not\xvdash{K} (\exists x ~ \alpha)$.
+    Da $K$ $\omega$-konsistent ist, folgt $\not\xvdash{K} (\exists x\quantsep \alpha)$.
   \end{proof}
 \end{lemma}
 
@@ -7527,10 +7517,10 @@ $\mathrm{S}$ ist $\omega$-konsistent, da die Standardinterpretation
     Aufgrund der Konstruktion von $\gamma_0$ aus dem Diagonalisierungslemma
     (\autoref{satz:6}) gilt
     $\Svdash\gamma_{0} \leftrightarrow
-          (\forall x_{1} ~ \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
+          (\forall x_{1}\quantsep \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
     Mit der Äquivalenzregel folgt
-    $\Svdash\neg(\forall x_{1} ~ \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$,
-    d.\,h. $\Svdash (\exists x_{1} ~ \phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
+    $\Svdash\neg(\forall x_{1}\quantsep \neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$,
+    d.\,h. $\Svdash (\exists x_{1}\quantsep \phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
 
     Wir wissen: $\not\Svdash \gamma_{0}$ (\autoref{satz-gamma0-nicht-beweisbar}).
     Also ist $\mathit{Pf}(r, u)$ ($u$ ist die Gödelnummer von $\gamma_{0}$)
@@ -7538,7 +7528,7 @@ $\mathrm{S}$ ist $\omega$-konsistent, da die Standardinterpretation
     Folglich gilt $\Svdash\neg\phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}, x_{1}/\overline{r}]$
     für jedes $r\in\N$.
     Dann folgt aus der $\omega$-Konsistenz von
-    $\mathrm{S}$: $\not\Svdash (\exists x_{1} ~  \phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
+    $\mathrm{S}$: $\not\Svdash (\exists x_{1}\quantsep  \phi_{Pf}[x_{2}/\ucorner{\gamma_{0}}])$.
     Das ist ein Widerspruch zur Konsistenz von $\mathrm{S}$.
   \end{proof}
 \end{satz}
@@ -7562,7 +7552,7 @@ geht für jede Theorie $K$ mit den folgenden Eigenschaften:
 \begin{enumerate}
  \item Die Menge aller Axiome von $K$ ist repräsentierbar;
 
-       d.\,h. das Prädikat $\{m ~\colon \text{$m$
+       d.\,h. das Prädikat $\{m \colon \text{$m$
   ist Gödelnummer eines Axioms von $K$}\}$ ist repräsentierbar in $K$.
 
  \item $\xvdash{K} 0\ne\overline{1}$.
@@ -7593,7 +7583,7 @@ Der Beweis des Satzes geht analog zu den Beweisen der vorherigen Sätze.
 
   Die Konsistenz einer Theorie $K$ lässt sich nicht "`innerhalb"' von $K$
   zeigen. ($\mathrm{S}$ ist konsistent bedeutet "`$0=\overline{1}$"' ist
-  nicht beweisbar; $\forall x_{1}~ \neg\phi_{Pf}[x_{2}/\text{\glqq{}$0=\overline{1}$\grqq{}}]$).
+  nicht beweisbar; $\forall x_{1}\quantsep \neg\phi_{Pf}[x_{2}/\text{\glqq{}$0=\overline{1}$\grqq{}}]$).
 
   Daraus hat sich die Berechenbarkeitstheorie mit den (primitiv-)rekursiven
   Funktionen entwickelt.
