- Fehler berichtigt von jimmi_usa2000@yahoo.com
git-svn-id: https://svn.lug-jena.de/uni-skripte@1030 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -2651,7 +2651,7 @@ Wahrscheinlichkeitsraum ist.
 \begin{definition}
   Seien $A,B\in\CF$. $A$ und $B$ heiﬂen
   \highl{unabh‰ngig}, wenn gilt
-  \[P(A\cup B)=P(A)\cdot P(B)\]
+  \[P(A\cap B)=P(A)\cdot P(B)\]
 \end{definition}
 
 \begin{remark}
